--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         }
         .clase-migas{
             font-family: 'Courier New', Courier, monospace;
+            text-align: center;
         }
         .cosas-tabla{
             font-size: x-large;
